# soci-test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: libsoci_mysql.so.3.2  libsoci_sqlite3.so.3.2
